<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_24dp"
    tools:context=".presentation.ui.SupplyResetEmailFragment">

    <ImageView
        android:id="@+id/back_arrow_image_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_baseline_back_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/forgot_password_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_20dp"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/all_forgot_password"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_16sp"
        app:layout_constraintBottom_toBottomOf="@+id/back_arrow_image_view"
        app:layout_constraintStart_toEndOf="@+id/back_arrow_image_view"
        app:layout_constraintTop_toTopOf="@+id/back_arrow_image_view" />

    <EditText
        android:id="@+id/email_address_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/all_email_address"
        android:textSize="@dimen/text_size_12sp"
        android:textColor="@color/gray_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/supply_reset_horizontal_guideline1" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_20dp"
        android:backgroundTint="@color/deep_sky_blue"
        android:text="@string/all_submit"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_address_edit_text" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_29dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submit_button">

        <TextView
            android:id="@+id/remember_password_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat"
            android:text="@string/all_i_can_remember_my_password"
            android:textSize="@dimen/text_size_14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/login_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_11dp"
            android:fontFamily="@font/montserrat"
            android:text="@string/all_login"
            android:textColor="@color/deep_sky_blue"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/remember_password_text_view"
            app:layout_constraintStart_toEndOf="@+id/remember_password_text_view"
            app:layout_constraintTop_toTopOf="@+id/remember_password_text_view" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/supply_reset_horizontal_guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.08891929" />


</androidx.constraintlayout.widget.ConstraintLayout>